--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">SOBRE DULCE SABOR</span></h5>
-    <p>Dulce Sabor es una pastelería que abre sus puertas en el corazón de la ciudad, ofreciendo una experiencia única para los amantes de los postres y los dulces. Fundada con la pasión por la repostería de su propietaria, Estephany, la pastelería se ha convertido en un destino popular para aquellos que buscan deleitar sus sentidos con los sabores más exquisitos.</p>
+    <p>Dulce Sabor es una pastelería que abre sus puertas en el corazón de la ciudad, ofreciendo una experiencia única para los amantes de los postres y los dulces. Fundada con la pasión por la repostería de su propietaria, Daniela, la pastelería se ha convertido en un destino popular para aquellos que buscan deleitar sus sentidos con los sabores más exquisitos.</p>
     <p>En Dulce Sabor, no solo encontrarás una amplia variedad de pasteles y postres, sino también un ambiente acogedor donde puedes disfrutar de un momento de dulzura y relajación. Nuestro compromiso es hacer que cada visita sea una experiencia memorable para nuestros clientes.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Haz que cada día sea un poco más dulce." En Dulce Sabor, creemos que la felicidad está hecha de pequeños momentos dulces.</i></p>
-      <p>Pastelera y Propietaria: Estephany</p>
+      <p>Pastelera y Propietaria: Daniela Alejandra</p>
     </div>
     <img src="/w3images/bakery_interior.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Horario de apertura:</strong> todos los días de 8am a 6pm.</p>
